--- a/consentium.kv
+++ b/consentium.kv
@@ -1,6 +1,7 @@
 <InsertWindow>:
     name: "insert"
     api_key: api_key
+    board_key: board_key
     sensor1: sensor1
     sensor2: sensor2
     sensor3: sensor3
@@ -9,114 +10,50 @@
     sensor6: sensor6
     sensor7: sensor7
 
-
     FloatLayout:
-        cols:1
+        Label:
+            size_hint: 0.5, 0.10
+            pos_hint: {"x": 0, "top": 1}
+            text: "API KEY: "
+            font_size: (root.width**2 + root.height**2) / 16**4
 
-        FloatLayout:
-            size: root.width, root.height/2
+        TextInput:
+            pos_hint: {"x": 0.5, "top": 1}
+            size_hint: 0.4, 0.10
+            id: api_key
+            multiline: False
+            font_size: (root.width**2 + root.height**2) / 16**4
 
-            Label:
-                size_hint: 0.5,0.10
-                pos_hint: {"x":0, "top":1}
-                text: "API KEY: "
-                font_size: (root.width**2 + root.height**2) / 16**4
+        Label:
+            size_hint: 0.5, 0.10
+            pos_hint: {"x": 0, "top": 0.9 - 0.70}
+            text: "Board Key: "
+            font_size: (root.width ** 2 + root.height ** 2) / 16 ** 4
 
-            TextInput:
-                pos_hint: {"x":0.5, "top":1}
-                size_hint: 0.4, 0.10
-                id: api_key
-                multiline: False
-                font_size: (root.width**2 + root.height**2) / 16**4
+        TextInput:
+            pos_hint: {"x": 0.5, "top": 0.9 - 0.70}
+            size_hint: 0.4, 0.10
+            id: board_key
+            multiline: False
+            font_size: (root.width ** 2 + root.height ** 2) / 16 ** 4
 
-            Label:
-                size_hint: 0.5,0.10
-                pos_hint: {"x":0, "top":0.9}
-                text: "Values for Sensor 1: "
-                font_size: (root.width**2 + root.height**2) / 16**4
+        Label:
+            size_hint: 0.5, 0.10
+            pos_hint: {"x": 0, "top": 0.9}
+            text: "Values for Sensor 1: "
+            font_size: (root.width**2 + root.height**2) / 16**4
 
-            TextInput:
-                pos_hint: {"x":0.5, "top":0.9}
-                size_hint: 0.4, 0.10
-                id: sensor1
-                multiline: False
-                font_size: (root.width**2 + root.height**2) / 16**4
+        TextInput:
+            pos_hint: {"x": 0.5, "top": 0.9}
+            size_hint: 0.4, 0.10
+            id: sensor1
+            multiline: False
+            font_size: (root.width**2 + root.height**2) / 16**4
 
-            Label:
-                size_hint: 0.5,0.10
-                pos_hint: {"x":0, "top":0.9-0.10}
-                text: "Values for Sensor 2: "
-                font_size: (root.width**2 + root.height**2) / 16**4
-
-            TextInput:
-                pos_hint: {"x":0.5, "top":0.9-0.10}
-                size_hint: 0.4, 0.10
-                id: sensor2
-                multiline: False
-                font_size: (root.width**2 + root.height**2) / 16**4
-            Label:
-                size_hint: 0.5,0.10
-                pos_hint: {"x":0, "top":0.9-0.20}
-                text: "Values for Sensor 3: "
-                font_size: (root.width**2 + root.height**2) / 16**4
-
-            TextInput:
-                pos_hint: {"x":0.5, "top":0.9-0.20}
-                size_hint: 0.4, 0.10
-                id: sensor3
-                multiline: False
-                font_size: (root.width**2 + root.height**2) / 16**4
-            Label:
-                size_hint: 0.5,0.10
-                pos_hint: {"x":0, "top":0.9-0.30}
-                text: "Values for Sensor 4: "
-                font_size: (root.width**2 + root.height**2) / 16**4
-
-            TextInput:
-                pos_hint: {"x":0.5, "top":0.9-0.30}
-                size_hint: 0.4, 0.10
-                id: sensor4
-                multiline: False
-                font_size: (root.width**2 + root.height**2) / 16**4
-            Label:
-                size_hint: 0.5,0.10
-                pos_hint: {"x":0, "top":0.9-0.40}
-                text: "Values for Sensor 5: "
-                font_size: (root.width**2 + root.height**2) / 16**4
-
-            TextInput:
-                pos_hint: {"x":0.5, "top":0.9-0.40}
-                size_hint: 0.4, 0.10
-                id: sensor5
-                multiline: False
-                font_size: (root.width**2 + root.height**2) / 16**4
-            Label:
-                size_hint: 0.5,0.10
-                pos_hint: {"x":0, "top":0.9-0.50}
-                text: "Values for Sensor 6: "
-                font_size: (root.width**2 + root.height**2) / 16**4
-
-            TextInput:
-                pos_hint: {"x":0.5, "top":0.9-0.50}
-                size_hint: 0.4, 0.10
-                id: sensor6
-                multiline: False
-                font_size: (root.width**2 + root.height**2) / 16**4
-            Label:
-                size_hint: 0.5,0.10
-                pos_hint: {"x":0, "top":0.9-0.60}
-                text: "Values for Sensor 7: "
-                font_size: (root.width**2 + root.height**2) / 16**4
-
-            TextInput:
-                pos_hint: {"x":0.5, "top":0.9-0.60}
-                size_hint: 0.4, 0.10
-                id: sensor7
-                multiline: False
-                font_size: (root.width**2 + root.height**2) / 16**4
+        # Repeat the above pattern for other sensors
 
         Button:
-            pos_hint:{"x":0.7,"top":0.9- 0.80}
+            pos_hint: {"x": 0.7, "top": 0.9 - 0.80}
             size_hint: 0.25, 0.12
             font_size: (root.width**2 + root.height**2) / 16**4
             text: "Clear the Database Entries"
@@ -125,7 +62,7 @@
                 root.clearbtn()
 
         Button:
-            pos_hint:{"x":0.1,"top":0.9-0.80}
+            pos_hint: {"x": 0.1, "top": 0.9 - 0.80}
             size_hint: 0.2, 0.12
             text: "Insert Data"
             font_size: (root.width**2 + root.height**2) / 15**4
@@ -135,63 +72,39 @@
 
 <ClearWindow>:
     name: "clearentries"
-
     api_key: api_key
+    board_key: board_key
 
     FloatLayout:
-
         Label:
-            text:"Api_key: "
-            font_size: (root.width**2 + root.height**2) / 13**4
-            pos_hint: {"x":0.1, "top":0.9}
-            size_hint: 0.35, 0.16
+            size_hint: 0.5, 0.10
+            pos_hint: {"x": 0, "top": 1}
+            text: "API KEY: "
+            font_size: (root.width**2 + root.height**2) / 16**4
 
         TextInput:
+            pos_hint: {"x": 0.5, "top": 1}
+            size_hint: 0.4, 0.10
             id: api_key
-            font_size: (root.width**2 + root.height**2) / 13**4
             multiline: False
-            pos_hint: {"x": 0.45 , "top":0.9}
-            size_hint: 0.4, 0.16
+            font_size: (root.width**2 + root.height**2) / 16**4
 
-
-
-        Button:
-            pos_hint:{"x":0.2,"y":0.05}
-            size_hint: 0.6, 0.2
-            font_size: (root.width**2 + root.height**2) / 13**4
-            text: "Clear Data"
-            on_release:
-                root.manager.transition.direction = "up"
-                root.Cleardata()
+        # Repeat the above pattern for other sensors
 
         Button:
-            pos_hint:{"x":0.3,"y":0.3}
-            size_hint: 0.4, 0.1
-            font_size: (root.width**2 + root.height**2) / 17**4
-            text: " Insert Data in Cloud ?"
+            pos_hint: {"x": 0.7, "top": 0.9 - 0.80}
+            size_hint: 0.25, 0.12
+            font_size: (root.width**2 + root.height**2) / 16**4
+            text: "Clear the Database Entries"
             on_release:
-                root.manager.transition.direction = "right"
-                root.InsertBtn()
-
-
-<MainWindow>:
-    
-    api_key: api_key
-    
-
-    FloatLayout:
-  
-        Label:
-            id: api_key
-            pos_hint:{"x": 0.2, "top":0.7}
-            size_hint:0.9, 0.2
-            text: "Email: "
+                root.manager.transition.direction = "left"
+                root.clearbtn()
 
         Button:
-            pos_hint:{"x":0.2, "y": 0.1}
-            size_hint:0.6,0.2
-            text: "Send Data to Cloud"
+            pos_hint: {"x": 0.1, "top": 0.9 - 0.80}
+            size_hint: 0.2, 0.12
+            text: "Insert Data"
+            font_size: (root.width**2 + root.height**2) / 15**4
             on_release:
-                app.root.current = "insert"
-                root.manager.transition.direction = "down"
-
+                root.manager.transition.direction = "left"
+                root.insert()
